--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -7,7 +7,7 @@
 
 <EditForm Model="@EditEmployeeModel" OnValidSubmit="HandleValidSubmit">
     <DataAnnotationsValidator />
-    <h3>Edit Employee</h3>
+    <h3>@PageHeader</h3>
     <hr />
     <ValidationSummary />
     <div class="form-group row">
