--- a/EmployeeManagement.Web/Shared/NavMenu.razor
+++ b/EmployeeManagement.Web/Shared/NavMenu.razor
@@ -13,21 +13,30 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/editemployee">
+            <NavLink class="nav-link" href="/editemployee" @onclick="HandleClick">
                 <span class="oi oi-file" aria-hidden="true"></span> Create
             </NavLink>
         </li>
+        @*<NavLink class="nav-link" href="/editemployee/1">
+            <span class="oi oi-file" aria-hidden="true"></span> Edit
+        </NavLink>*@
 
     </ul>
 </div>
 
 @code {
     private bool collapseNavMenu = true;
+    @inject NavigationManager NavigationManager;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    private void HandleClick()
+    {
+        NavigationManager.NavigateTo("editemployee", true);
     }
 }
