--- a/EmployeeManagement.Web/Pages/DisplayEmployeet.razor
+++ b/EmployeeManagement.Web/Pages/DisplayEmployeet.razor
@@ -11,7 +11,7 @@
 
         @if (ShowFooter)
         {
-            <div class="card-footer row">
+            <div class="row" style="margin-left:20px; margin-top:15px;">
                 <a href="@($"employeedetails/{Employee.EmployeeId}")" class="btn btn-primary m-1">View</a>
 
                 <a href="@($"editemployee/{Employee.EmployeeId}")" class="btn btn-primary m-1">Edit</a>
